updated unit tests so that it taken account of our custom exceptions.